--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/form.css" />
   <title>Page 3</title>
 </head>
 
@@ -14,6 +14,17 @@
     <a href="./index.html">Go to home</a>
     <h1>Welcome to page 3</h1>
   </section>
+  <form class="feedback-form" autocomplete="off">
+    <label>
+      Email
+      <input type="email" name="email" autofocus />
+    </label>
+    <label>
+      Message
+      <textarea name="message" rows="8"></textarea>
+    </label>
+    <button type="submit">Submit</button>
+  </form>
   <script type="module" src="./js/2-form.js"></script>
 </body>
 
